fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,20 @@
 body {
 	background: url(../images/desert.jpg) no-repeat;
 	background-size: cover;
+    background-attachment: fixed;
 	width: 100%;
+    font-family: 'Gloria Hallelujah', cursive;
+    
+}
 
+.circle-arrow {
+    margin-top: 230px;
+    padding-left: 50px;
+}
+
+.carrier {
+    padding-left: 100px;
+    padding-top: 30px;
 }
 
 .lucha {
@@ -59,20 +71,21 @@ top: 14px;
 	padding-left: 20px;
 	padding-right: 20px;
 	text-align: center;
-	font-family: 'Gloria Hallelujah', cursive;
-	font-size: 38px
-
+    font-size: 38px
 }
 
 .gum {
-	margin-left: 150px;
+	margin-left: 100px;
 	margin-top: 75px;
 }
 
 .abtSec {
-	width: 700px;
-	height: 400px;
-	background-color: yellow;
+	color: white;
+}
+
+.ab-content {
+    padding: 150px 0;
+    font-size: 2.2em;
 }
 
 .arrow {
@@ -215,4 +228,33 @@ top: 14px;
       -webkit-transform: translate3d(0, 0, 0);
               transform: translate3d(0, 0, 0);
     }
+}
+
+/*********************************************
+            BOUNCE EFFECT
+***********************************************/  
+
+.bounce {
+  position:relative;
+  font-family: 'Anton', sans-serif;
+  -webkit-animation:bounce 1s infinite;
+}
+
+@-webkit-keyframes bounce {
+  0%{
+    bottom:5px;
+  }
+  
+  25%, 75% {
+    bottom:15px;
+  }
+  
+  
+  50% {
+    bottom:20px;
+  }
+  
+  100% {
+    bottom:0;
+  }
 }
